Fix alignment of fields on mobile

--- a/styles.css
+++ b/styles.css
@@ -206,7 +206,6 @@ padding: 15px 10px;
 @media only screen and (min-width: 769px) {
   .calculator-inputs, .calculator-outputs {
     flex-basis: 50%;
-    
    padding: 60px 40px 40px 40px;
   
   }
@@ -223,6 +222,7 @@ padding: 15px 10px;
   }
   .calculator-outputs, .calculator-inputs {
     width: 100vw;
+    padding-top: 20px;
   }
 
   .calculator-outputs {
